--- a/new-project.html
+++ b/new-project.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<title>My first three.js app</title>
-		<link rel="stylesheet" href="css/main.css">
+		<style>
+			body { margin: 0; }
+		</style>
 	</head>
 	<body>
+		<script src="https://threejs.org/build/three.js"></script>
 		<script src="js/three.js"></script>
-		<script>
-			// Our Javascript will go here.
-		</script>
+
 	</body>
 </html>
