--- a/new-project.html
+++ b/new-project.html
@@ -2,11 +2,10 @@
 <html>
 	<head>
 		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
 	</head>
 	<body>
+		<div id="info">cube</div>
+
 		<script src="https://threejs.org/build/three.js"></script>
 		<script src="js/three.js"></script>
 
